Update the photo management